--- a/templates/payment_success.html
+++ b/templates/payment_success.html
@@ -27,7 +27,7 @@
             
             <div class="action-buttons">
                 <a href="/upload" class="btn-primary btn-large">Start Analyzing Documents</a>
-                <a href="/pricing" class="btn-secondary">Manage Subscription</a>
+                <a href="/profile" class="btn-secondary">Go to Profile</a>
             </div>
             
             <div class="support-info">
